src/test/deca/context/invalid/class_extends_type.deca
/*
    Description : Classe qui étends un type et non une classe

    Résultat : erreur contextuelle (deca:6:0)
*/
class C extends int{}
// @expected_output deca:6:0
